result/instance34/result0/planning_result.txt

  File "/home/changmin/PycharmProjects/OPTPlan/result/instance34/result0/planning.py", line 92
    The robot actions are designed to follow the given rules strictly. Each action has preconditions that must be met before execution, ensuring logical consistency and safety. For example, the 'pick' action ensures the object is not a box and is not already in the bin, while the 'fold' action checks if the object is foldable. The effects update the state of the robot and objects, reflecting the changes caused by the actions. This approach ensures that the robot's behavior is predictable and adheres to the specified rules for bin packing
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ^
SyntaxError: unterminated string literal (detected at line 92)


